# forge-shell

./: .env.example  .gitignore  COMMUNITY.md  CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  DATA_LICENSE  GOVERNANCE.md  LICENSE  PROJECT_REPORT.md  README.md  build.bat  build.rs  build.sh  schedule.html  悬赏榜.md
.claude/: settings.json
.github/workflows/: build.yml  sync-from-gitee.yml
assets/web/: app.js  index.html  style.css
src/: config.rs  error.rs  error_log.rs  locale.rs  main.rs  system_prompt.rs  utils.rs
src/agent/: agent_executor.rs  constraints.rs  dispatcher.rs  mod.rs  orchestrator.rs  tool_registry.rs  workflow.rs
src/engine/: ast_parser.rs  conversation.rs  mcp.rs  mod.rs  prompt_optimizer.rs  router.rs  semantic_index.rs  session.rs  stream.rs
src/engine/cache/: mod.rs
src/engine/context/: level1.rs  level2.rs  level3.rs  level4.rs  mod.rs
src/engine/inference/: mod.rs
src/engine/memory/: mod.rs
src/engine/tools/: backup.rs  mod.rs  sandbox.rs
src/evolution/: collector.rs  mod.rs  reflection.rs  sop.rs
src/platform/: mod.rs
src/tui/: app.rs  keybindings.rs  mod.rs
src/tui/components/: chat_view.rs  community_panel.rs  cost_panel.rs  diff_view.rs  mod.rs  mode_bar.rs  project_panel.rs  stats_bar.rs
src/web/: api.rs  mod.rs  static_files.rs
